--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,6 @@ commands:
     description: PortCommand
     permission: port.admin
     usage: /port <open | close>
+permissions:
+  port.admin:
+    default: OP
